# macwifi

./: .gitignore  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  ruff.yml
macwifi/: __init__.py  macwifi.py
